First milestone. Basic layout.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "af-node-base",
+  "name": "webaudio-app",
   "version": "0.0.1",
   "dependencies": {
-    "express": "^4.10.2"
+    "express": "^4.10.2",
+    "jade": "*"
   }
 }
