Integrate freesound API.

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "dependencies": {
     "express": "^4.10.2",
-    "jade": "*"
+    "jade": "*",
+    "request": "^2.53.0"
   }
 }
