Added refreshToken job to main app.

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "express": "^4.10.2",
     "jade": "*",
     "request": "^2.53.0",
-    "redis": "^0.12.1"
+    "redis": "^0.12.1",
+    "cron" : "*"
   }
 }
