Added login form. Fixed mongodb connection

--- a/package.json
+++ b/package.json
@@ -6,14 +6,12 @@
     "cookie-parser": "*",
     "body-parser":"*",
     "express-session":"*",
-    "jade": "*",
     "request": "^2.53.0",
     "redis": "^0.12.1",
     "cron" : "*",
-    "flux": "^2.0.0",
     "react": "^0.13.0",
     "underscore": "^1.7.0",
-    "mongodb": "*",
+    "mongodb": "~2.0",
     "monk": "*"
   },
   "devDependencies": {
